# arachnite-oss

./: .gitignore  LICENSE  README.md  _run_dashboard.py  arachnite.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
arachnite/: __init__.py  builder.py  bus.py  codec.py  config.py  context.py  exceptions.py  framework_config.py  health.py  llm_provider.py  logging.py  media.py  models.py  runtime.py  safety_monitor.py  shutdown.py  supervisor.py  testing.py  web.py
arachnite/distributed/: __init__.py  agent_node.py  colocation.py  manifest.py  mesh.py  permissions.py
arachnite/nodes/: __init__.py  action.py  active_inference.py  base.py  decision.py  instinct.py  llm.py  sense.py
arachnite/transport/: __init__.py  base.py  local.py  mqtt.py  nats.py  redis.py
baselines/: README.md  __init__.py  compare.py  shared_sim.py
baselines/jason/: ArmState.java  JasonBench.java  README.md  RobotArmEnv.java  build.ps1  build.sh  logging.properties  robot_arm.asl  robot_arm.mas2j  run_jason.py
baselines/py_trees/: __init__.py  robot_arm.py
baselines/ros2/: README.md  robot_arm.py  robot_arm_bt.py
benchmarks/: __init__.py  active_inference_comparison.py  memory_footprint.py  multistep_action_latency.py  reflex_latency.py  scalability_extended.py  scalability_sweep.py  soak_test.py  stage_breakdown.py  stats.py  suite.py  tick_latency.py  transport_latency.py
docs/uml/: 01_node_hierarchy.puml  02_data_models.puml  03_runtime_composition.puml  04_tick_sequence.puml  05_distributed.puml  README.md
examples/: minimal_agent.py  temperature_monitor.py  web_dashboard_demo.py
examples/robot_arm/: __init__.py  manifest.yaml  nodes.py  simulate.py
spec/: 01_introduction_architecture.md  02_nodes.md  03_runtime.md  04_extension_testing.md  05_distributed.md  06_infrastructure.md  07_reference.md  08_benchmarks.md
tests/: conftest.py
tests/integration/: test_framework_contracts.py  test_interrupt_policies.py  test_runtime.py
tests/unit/: test_action.py  test_active_inference.py  test_agent_mesh.py  test_bench_stats.py  test_builder.py  test_bus.py  test_codec.py  test_config.py  test_context.py  test_decision.py  test_exceptions.py  test_framework_config.py  test_framework_gaps.py  test_health.py  test_instinct.py  test_llm_instinct.py  test_llm_provider.py  test_local_transport.py  test_logging.py  test_manifest.py  test_media.py  test_merge_policy.py  test_models.py  test_multistep_action_latency.py  test_node_lifecycle.py  test_nodes.py  test_permissions.py  test_runtime_unit.py  test_safety_monitor.py  test_sense.py  test_shutdown.py  test_soak_test.py  test_stage_instrumentation.py  test_strict_assertions.py  test_supervisor.py  test_testing.py  (+3 more)
tutorials/: ._04_your_first_agent.md  01_welcome.md  02_the_big_idea.md  03_meet_the_pieces.md  04_your_first_agent.md  05_the_tick_loop.md  06_priorities_and_decisions.md  07_reflexes.md  08_smart_lamp_project.md  09_benchmarking.md  README.md  glossary.md
(+23 files in other folders)
