[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arachnite"
version = "0.11.0"
description = "A biologically-inspired reactive agent framework for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "memrecolak" }]
keywords = ["agent", "reactive", "robotics", "iot", "ai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "msgpack>=1.0",
    "typing_extensions>=4.5; python_version<'3.12'",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage      = "https://github.com/memrecolak/arachnite-oss"
Repository    = "https://github.com/memrecolak/arachnite-oss"
Issues        = "https://github.com/memrecolak/arachnite-oss/issues"
Documentation = "https://github.com/memrecolak/arachnite-oss/tree/main/spec"

[project.optional-dependencies]
mqtt   = ["aiomqtt>=2.0"]
nats   = ["nats-py>=2.7"]
redis  = ["redis>=5.0,<7"]
numpy  = ["numpy>=1.26"]
web    = ["fastapi>=0.110", "uvicorn>=0.27"]
llm       = ["anthropic>=0.25"]
ollama    = ["openai>=1.0"]
local-llm = ["llama-cpp-python>=0.2"]
benchmarks = ["psutil>=5.9"]
all       = ["aiomqtt>=2.0", "nats-py>=2.7", "redis>=5.0,<7", "numpy>=1.26", "fastapi>=0.110", "uvicorn>=0.27", "anthropic>=0.25", "openai>=1.0", "llama-cpp-python>=0.2", "psutil>=5.9"]
dev    = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["arachnite"]

[tool.hatch.build.targets.sdist]
exclude = [
    "baselines",
    "baselines/**",
    "benchmarks/results",
    "tests",
    "tutorials",
    "examples",
    "spec",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "module"
testpaths   = ["tests"]
addopts     = "-v --tb=short"
filterwarnings = ["error"]
norecursedirs = ["baselines", ".git", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
exclude                = ["baselines/"]

[tool.ruff]
target-version = "py310"
line-length    = 100
extend-exclude = ["baselines"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# web.py embeds a self-contained HTML/CSS/JS dashboard as a Python string literal;
# long lines inside that string cannot be broken without corrupting the content.
"arachnite/web.py" = ["E501"]
